Change response to GUID
